# qa-to-do-mcp-tool

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.sandcastle.json  vite.config.ts
.beads/: issues.jsonl  metadata.json
docs/: scratch-tracker.md
docs/agents/: domain.md  issue-tracker.md
docs/prd/: sandcastle-ralph-qa-todo-app.md
scripts/: build-mcp.mjs  sync-tauri-version.mjs
src/: App.svelte  App.test.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: appShell.ts  beadsFailureIssue.test.ts  beadsFailureIssue.ts  beadsQa.test.ts  beadsQa.ts  inboxImporter.ts  linuxPackaging.test.ts  mcpConfig.ts  mcpInbox.ts  mcpInboxImport.test.ts  mcpServer.test.ts  mcpServer.ts  mcpToolHandlers.test.ts  mcpToolHandlers.ts  providerSetup.test.ts  providerSetup.ts  qaSession.ts  qaStorage.test.ts  qaStorage.ts  scratchFailureIssue.test.ts  scratchFailureIssue.ts  scratchFiles.ts  scratchQa.test.ts  scratchQa.ts  toQa.test.ts  toQa.ts
