[package]
name = "qa-to-do"
version = "0.1.5"
description = "Local-first QA To Do desktop app"
authors = ["QA To Do Maintainers"]
edition = "2021"

[lib]
name = "qa_to_do_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
